[gd_scene load_steps=19 format=3 uid="uid://c0xbo7gh56mka"]

[ext_resource type="Script" path="res://scripts/Character.gd" id="1_yh3su"]
[ext_resource type="Texture2D" uid="uid://v7jncct86053" path="res://assets/临时资源/character/48x48/Heroes/Hero 02 48.png" id="2_70yyi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fthmr"]
size = Vector2(5, 5)

[sub_resource type="Animation" id="Animation_wkgao"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fdl72"]
resource_name = "attack_down"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [65, 67, 68, 70]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_80o5x"]
resource_name = "attack_left"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [119, 117, 123, 121]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_to1go"]
resource_name = "attack_right"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [96, 98, 108, 110]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_auatr"]
resource_name = "attack_up"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [88, 90, 93, 95]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_k5or7"]
resource_name = "attacked"
length = 1.7
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0bnn5"]
resource_name = "idle"
length = 2.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_xkr80"]
resource_name = "idle_left"
length = 2.8
loop_mode = 1
step = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_gxpae"]
resource_name = "idle_right"
length = 2.8
loop_mode = 1
step = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_2j1uc"]
resource_name = "idle_up"
length = 2.8
loop_mode = 1
step = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_tur7y"]
resource_name = "movedown"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_gpvt7"]
resource_name = "move_left"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_h0rsj"]
resource_name = "move_right"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_ba68x"]
resource_name = "move_up"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jcjxj"]
_data = {
"RESET": SubResource("Animation_wkgao"),
"attack_down": SubResource("Animation_fdl72"),
"attack_left": SubResource("Animation_80o5x"),
"attack_right": SubResource("Animation_to1go"),
"attack_up": SubResource("Animation_auatr"),
"attacked": SubResource("Animation_k5or7"),
"idle_down": SubResource("Animation_0bnn5"),
"idle_left": SubResource("Animation_xkr80"),
"idle_right": SubResource("Animation_gxpae"),
"idle_up": SubResource("Animation_2j1uc"),
"move_down": SubResource("Animation_tur7y"),
"move_left": SubResource("Animation_gpvt7"),
"move_right": SubResource("Animation_h0rsj"),
"move_up": SubResource("Animation_ba68x")
}

[node name="Character" type="Area2D"]
z_index = 2
z_as_relative = false
position = Vector2(64, 64)
scale = Vector2(2, 2)
collision_layer = 31
collision_mask = 31
script = ExtResource("1_yh3su")
move_speed = 6
HP = 10
MAXHP = 10
ATT = 3
DEF = 0
LUCK = 0
DOG = 5
CRI = 5

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_fthmr")

[node name="CharacterSprite" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_70yyi")
offset = Vector2(27, 20)
hframes = 8
vframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterSprite"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_jcjxj")
}

[node name="TransformCamera" type="RemoteTransform2D" parent="."]

[node name="PointingRayLeft" type="RayCast2D" parent="."]
position = Vector2(16, 16)
target_position = Vector2(-32, 0)
collision_mask = 31
collide_with_areas = true

[node name="PointingRayUp" type="RayCast2D" parent="."]
position = Vector2(16, 16)
target_position = Vector2(0, -32)
collision_mask = 31
collide_with_areas = true

[node name="PointingRayDown" type="RayCast2D" parent="."]
position = Vector2(16, 16)
target_position = Vector2(0, 32)
collision_mask = 31
collide_with_areas = true

[node name="PointingRayRight" type="RayCast2D" parent="."]
position = Vector2(16, 16)
target_position = Vector2(32, 0)
collision_mask = 31
collide_with_areas = true

[node name="AttackCD" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="AttackCD" to="." method="_on_attack_cd_timeout"]
